--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -1,130 +1,125 @@
 <template name="details">
     <section id="refine_menu">
-      {{> menu}}
-    </section> <!-- #refine menu -->
-
+        {{> menu}}
+    </section>
+    <!-- #refine menu -->
     <article dir="{{getDirection}}">
         <section class="shadow_bottom">
-          <div class="wrapper">
-            <div class="row">
-              <div class="col-sm-12">
-                <h3>{{title}}</h3>
-              </div>
-              {{#each getParentAttr oldId}}
-              {{#with getParentDetails parent}}
-              <div class="main_color">
-                <div>
-                  <p class="toggle">{{name}} :</p>
-
-                  <div style="display: none;" class="bg-white">
-                    <ul class="list-inline">
-                      {{#each getAllAttributes ../product _id}}              
-                      <li><a href="" ><img src="{{getImg productImage}}" width="70" height="70" id="img_attr"></a></li>
-                      {{/each}}
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              {{/with}}
-              {{/each}}
-              <div class="space-top-detail1">
-                <img id="hoverZoom" class="img-responsive" src="{{getImgForProduct _id}}" alt="{{title}}"/>
-              </div>
-              <div class="col-sm-12">
+            <div class="wrapper">
                 <div class="row">
-                  <div class="col-xs-12">
-                    <div class="form-group pull-left" >
-                      <label>{{_"Select Quatity:"}} </label>
-                      <select id="qty" style="-webkit-appearance:menulist;">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                      </select>
+                    <div class="col-sm-12">
+                        <h3>{{title}}</h3>
                     </div>
-                  </div>
+                    {{#each getParentAttr oldId}} {{#with getParentDetails parent}}
+                    <div class="main_color">
+                        <div>
+                            <p class="toggle">{{name}} :</p>
+                            <div style="display: none;" class="bg-white">
+                                <ul class="list-inline">
+                                    {{#each getAllAttributes ../product _id}}
+                                    <li>
+                                        <a href=""><img src="{{getImg productImage}}" width="70" height="70" id="img_attr"></a>
+                                    </li>
+                                    {{/each}}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    {{/with}} {{/each}}
+                    <div class="space-top-detail1">
+                        <img id="hoverZoom" class="img-responsive" src="{{getImgForProduct _id}}" alt="{{title}}" />
+                    </div>
+                    <div class="col-sm-12">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="form-group pull-left">
+                                    <label>{{_"Select Quatity:"}} </label>
+                                    <select id="qty" style="-webkit-appearance:menulist;">
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                        <option>4</option>
+                                        <option>5</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}</button>
+                                <h2 class="pull-right">{{selected_price}} تومان</h2>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
-                  <div class="col-xs-12">
-                    <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}</button>
-                    <h2 class="pull-right">{{selected_price}} تومان</h2>
-                    
-                  </div>
+                    <div class="col-sm-12">
+                        <div class="well-deatail">
+                            <p class="text-center text-detail">{{{description}}}</p>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-            <div class="row">
-              <div class="col-sm-12">
-                <div class="well-deatail">
-                  <p class="text-center text-detail">{{{description}}}</p>
-                </div>
-              </div>
-            </div>
-          </div>
         </section>
-
         <section class="shadow_bottom">
-          <div class="wrapper">
-            <div class="row">
-             <div class="col-sm-12">
-              <div class="col-md-6 pull-left space-top-detail2">
-               <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
-               <h4 class="bold text-center">{{currentUser.profile.firstname}} {{currentUser.profile.lastname}}</h4>
-             </div>
-
-           </div>
-         </div>
-         {{#if currentUser}}
-         <div class="col-sm-12">
-          <div class="space-comment box">
-            <p id="validdetail" style="color:red"></p>
-            <input id="title" type="text" class="form-control" placeholder="{{_"Title"}}..." required/>
-            <p id="validdetail1" style="color:red"></p>
-            <textarea class="form-control" id="comment" name="styled-textarea" onfocus="this.value='';" rows="7" placeholder="{{_"Write what you want"}}..."></textarea>
-          </div>
-          <button class="btn_register pull-right" id="addreview">{{_ "SEND"}}</button>
-        </div>
-        {{/if}}
-        <div class="clear-fix"></div>
-      {{#each getReviewBySort review}}
-        <div class="row">
-         <div class="col-sm-12">
-          <div class="col-sm-5 pull-left space-top-detail2">
-            <img src="{{getImages user}}" class="img-responsive center-block image{{user}}" style="width:50%;">
-           <h4 class="bold text-center {{user}}">{{getImageUser user}}</h4>
-          </div>
-          <div class="pull-left space-top-detail3" >
-            <h3>{{comment}}</h3>
-            <p class="no-margin">{{getDate date}}</p>
-          </div>
-          <div class="col-sm-2 pull-right space-top-detail2">
-          <!--  <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp; {{grade}}/5</h3> --> 
-         </div>
-         <div class="col-sm-12">
-           <h3 class="col-sm-5 pull-left space-top-detail2">{{title}}</h3>
-           <div class="pull-left border-detail">   
-           </div>
-         </div>
-       </div>  
-     </div>
-     {{/each}} 
-    </div>
-    </section>
-
-    <section id="forum_question" dir="{{getDirection}}">
-      <div class="container">
-        <div class="hold_product_detail">
-          <div class="col-md-12">
-            <h3 style="color: black;">{{_"RELATED PRODUCTS"}}</h3>
-          </div>
-          <div class="row"></div> 
-          {{>recommendation}}
-        </div>
-      </div>
-      <br/><br/><br />
-    </section>
-
-</article>
-
+            <div class="wrapper">
+                {{#if currentUser}}
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="col-md-6 pull-left space-top-detail2">
+                            <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
+                            <h4 class="bold text-center">{{currentUser.profile.firstname}} {{currentUser.profile.lastname}}</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12">
+                    <div class="space-comment box">
+                        <p id="validdetail" style="color:red"></p>
+                        <input id="title" type="text" class="form-control" placeholder="{{_" Title "}}..." required/>
+                        <p id="validdetail1" style="color:red"></p>
+                        <textarea class="form-control" id="comment" name="styled-textarea" onfocus="this.value='';" rows="7" placeholder="{{_" Write what you want "}}..."></textarea>
+                    </div>
+                    <button class="btn_register pull-right" id="addreview">{{_ "SEND"}}</button>
+                </div>
+                {{/if}}
+                <div class="clear-fix"></div>
+                {{#each getReviewBySort review}}
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="col-sm-5 pull-left space-top-detail2">
+                            <img src="{{getImages user}}" class="img-responsive center-block image{{user}}" style="width:50%;">
+                            <h4 class="bold text-center {{user}}">{{getImageUser user}}</h4>
+                        </div>
+                        <div class="pull-left space-top-detail3">
+                            <h3>{{comment}}</h3>
+                            <p class="no-margin">{{getDate date}}</p>
+                        </div>
+                        <div class="col-sm-2 pull-right space-top-detail2">
+                            <!--  <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp; {{grade}}/5</h3> -->
+                        </div>
+                        <div class="col-sm-12">
+                            <h3 class="col-sm-5 pull-left space-top-detail2">{{title}}</h3>
+                            <div class="pull-left border-detail">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
+        </section>
+        <section id="forum_question" dir="{{getDirection}}">
+            <div class="container">
+                <div class="hold_product_detail">
+                    <div class="col-md-12">
+                        <h3 style="color: black;">{{_"RELATED PRODUCTS"}}</h3>
+                    </div>
+                    <div class="row"></div>
+                    {{>recommendation}}
+                </div>
+            </div>
+            <br/>
+            <br/>
+            <br />
+        </section>
+    </article>
 </template>
