--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -73,13 +73,43 @@
                     </div>
                 </div>
                 <div class="col-sm-12">
-                    <div class="space-comment box">
-                        <p id="validdetail" style="color:red"></p>
-                        <input id="title" type="text" class="form-control" placeholder="{{_" Title "}}..." required/>
-                        <p id="validdetail1" style="color:red"></p>
-                        <textarea class="form-control" id="comment" name="styled-textarea" onfocus="this.value='';" rows="7" placeholder="{{_" Write what you want "}}..."></textarea>
+                    <div class="row">
+                        <div class="space-comment box">
+                            <p id="validdetail" style="color:red"></p>
+                            <input id="title" type="text" class="form-control" placeholder="{{_" Title "}}..." required/>
+                            <p id="validdetail1" style="color:red"></p>
+                            <textarea class="form-control" id="comment" name="styled-textarea" onfocus="this.value='';" rows="7" placeholder="{{_" Write what you want "}}..."></textarea>
+                        </div>
+                        
                     </div>
-                    <button class="btn_register pull-right" id="addreview">{{_ "SEND"}}</button>
+                    <div class="row">
+                        <div class="col-md-3 col-md-offset-2 pull-left">
+                            <form role="form">
+                                <div class="form-group select_grade">
+                                    <div class="star">
+                                        <div class="col-xs-2 rate-star">
+                                            <i class="fa fa-star fa-lg" data-star="1"></i>
+                                        </div>
+                                        <div class="col-xs-2 rate-star">
+                                            <i class="fa fa-star fa-lg" data-star="2"></i>
+                                        </div>
+                                        <div class="col-xs-2 rate-star">
+                                            <i class="fa fa-star fa-lg" data-star="3"></i>
+                                        </div>
+                                        <div class="col-xs-2 rate-star">
+                                            <i class="fa fa-star fa-lg" data-star="4"></i>
+                                        </div>
+                                        <div class="col-xs-2 rate-star">
+                                            <i class="fa fa-star fa-lg" data-star="5"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="col-md-5 pull-right">
+                            <button class="btn_register pull-right" id="addreview">{{_ "SEND"}}</button>
+                        </div>
+                    </div>
                 </div>
                 {{/if}}
                 <div class="clear-fix"></div>
@@ -101,6 +131,12 @@
                             <h3 class="col-sm-5 pull-left space-top-detail2">{{title}}</h3>
                             <div class="pull-left border-detail">
                             </div>
+                        </div>
+                        <div class="col-md-3 ">
+                            <p style="margin-left: 1px;">{{getDate date}}</p>
+                            <a href="#" style="font-weight:bold; color:#333; margin:5px 0px;padding:70px;">
+                                <span style="display: none">{{idreview}}</span>
+                                <i class="fa fa-heart likereview"></i>{{{getRate grade}}}</a>
                         </div>
                     </div>
                 </div>
